--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -1050,6 +1050,10 @@ video {
   margin-left: 1.25rem;
 }.ml-auto {
   margin-left: auto;
+}.mr-1 {
+  margin-right: 0.25rem;
+}.mr-1\.5 {
+  margin-right: 0.375rem;
 }.mr-2 {
   margin-right: 0.5rem;
 }.mr-4 {
@@ -1158,14 +1162,16 @@ video {
   height: 1rem;
 }.h-4\/5 {
   height: 80%;
+}.h-4\/6 {
+  height: 66.666667%;
+}.h-40 {
+  height: 10rem;
 }.h-48 {
   height: 12rem;
 }.h-5 {
   height: 1.25rem;
 }.h-5\/6 {
   height: 83.333333%;
-}.h-56 {
-  height: 14rem;
 }.h-6 {
   height: 1.5rem;
 }.h-64 {
@@ -1184,12 +1190,16 @@ video {
   height: 100dvh;
 }.h-\[100rem\] {
   height: 100rem;
+}.h-\[15rem\] {
+  height: 15rem;
 }.h-\[20rem\] {
   height: 20rem;
 }.h-\[25rem\] {
   height: 25rem;
 }.h-\[270px\] {
   height: 270px;
+}.h-\[28rem\] {
+  height: 28rem;
 }.h-\[30rem\] {
   height: 30rem;
 }.h-\[48rem\] {
@@ -1206,14 +1216,21 @@ video {
   height: 100dvh;
 }.h-full {
   height: 100%;
+}.h-max {
+  height: -moz-max-content;
+  height: max-content;
 }.h-screen {
   height: 100vh;
 }.max-h-72 {
   max-height: 18rem;
 }.max-h-full {
   max-height: 100%;
+}.max-h-screen {
+  max-height: 100vh;
 }.min-h-10 {
   min-height: 2.5rem;
+}.min-h-\[30px\] {
+  min-height: 30px;
 }.min-h-\[50px\] {
   min-height: 50px;
 }.min-h-\[theme\(spacing\.48\)\] {
@@ -1284,8 +1301,14 @@ video {
   width: 20rem;
 }.w-9 {
   width: 2.25rem;
+}.w-96 {
+  width: 24rem;
 }.w-\[--sidebar-width\] {
   width: var(--sidebar-width);
+}.w-\[18rem\] {
+  width: 18rem;
+}.w-\[20px\] {
+  width: 20px;
 }.w-\[21rem\] {
   width: 21rem;
 }.w-\[23rem\] {
@@ -1294,8 +1317,6 @@ video {
   width: 25rem;
 }.w-\[27rem\] {
   width: 27rem;
-}.w-\[30px\] {
-  width: 30px;
 }.w-\[500px\] {
   width: 500px;
 }.w-\[calc\(100\%\+2rem\)\] {
@@ -1391,6 +1412,9 @@ video {
   table-layout: auto;
 }.origin-top {
   transform-origin: top;
+}.-translate-x-0 {
+  --tw-translate-x: -0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1399,6 +1423,9 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-x-full {
   --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.-translate-y-0 {
+  --tw-translate-y: -0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-y-1\/2 {
   --tw-translate-y: -50%;
@@ -1456,6 +1483,19 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.transform-none {
   transform: none;
+}@keyframes bounce {
+
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}.animate-bounce {
+  animation: bounce 1s infinite;
 }@keyframes pulse {
 
   50% {
@@ -1812,6 +1852,9 @@ video {
 }.bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(164 202 254 / var(--tw-bg-opacity));
+}.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
 }.bg-blue-400\/30 {
   background-color: rgb(118 169 250 / 0.3);
 }.bg-blue-500 {
@@ -2020,8 +2063,8 @@ video {
   padding-bottom: 3.5rem;
 }.pb-2 {
   padding-bottom: 0.5rem;
-}.pb-20 {
-  padding-bottom: 5rem;
+}.pb-3 {
+  padding-bottom: 0.75rem;
 }.pb-5 {
   padding-bottom: 1.25rem;
 }.pb-6 {
@@ -2253,6 +2296,9 @@ video {
 }.text-purple-800 {
   --tw-text-opacity: 1;
   color: rgb(85 33 181 / var(--tw-text-opacity));
+}.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(240 82 82 / var(--tw-text-opacity));
 }.text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(224 36 36 / var(--tw-text-opacity));
@@ -2498,12 +2544,12 @@ video {
 }.hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(240 82 82 / var(--tw-bg-opacity));
+}.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 36 36 / var(--tw-bg-opacity));
 }.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}.hover\:text-blue-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(118 169 250 / var(--tw-text-opacity));
 }.hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
@@ -3110,6 +3156,10 @@ video {
     margin-right: auto;
   }
 
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
   .sm\:ms-4 {
     margin-inline-start: 1rem;
   }
@@ -3295,6 +3345,10 @@ video {
     padding: 2.5rem;
   }
 
+  .sm\:p-5 {
+    padding: 1.25rem;
+  }
+
   .sm\:p-8 {
     padding: 2rem;
   }
@@ -3314,6 +3368,11 @@ video {
     padding-right: 4rem;
   }
 
+  .sm\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -3327,6 +3386,11 @@ video {
   .sm\:py-1\.5 {
     padding-top: 0.375rem;
     padding-bottom: 0.375rem;
+  }
+
+  .sm\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   .sm\:pe-3 {
@@ -3367,9 +3431,19 @@ video {
     line-height: 1;
   }
 
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .sm\:leading-6 {
@@ -3449,8 +3523,8 @@ video {
     height: 12rem;
   }
 
-  .md\:h-\[35rem\] {
-    height: 35rem;
+  .md\:h-96 {
+    height: 24rem;
   }
 
   .md\:w-2\/4 {
@@ -3543,11 +3617,6 @@ video {
 
   .md\:ps-3 {
     padding-inline-start: 0.75rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .md\:text-6xl {
@@ -3662,6 +3731,11 @@ video {
     padding-bottom: 4rem;
   }
 
+  .lg\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .lg\:pe-8 {
     padding-inline-end: 2rem;
   }
@@ -3747,6 +3821,18 @@ video {
     display: none;
   }
 
+  .xl\:h-\[87\.5vh\] {
+    height: 87.5vh;
+  }
+
+  .xl\:h-screen {
+    height: 100vh;
+  }
+
+  .xl\:w-1\/2 {
+    width: 50%;
+  }
+
   .xl\:w-1\/4 {
     width: 25%;
   }
@@ -3798,6 +3884,10 @@ video {
 
   .xl\:gap-10 {
     gap: 2.5rem;
+  }
+
+  .xl\:overflow-hidden {
+    overflow: hidden;
   }
 
   .xl\:overflow-visible {
