--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -940,8 +940,6 @@ video {
   grid-column-start: var(--col-start-default);
 }.row-start-2 {
   grid-row-start: 2;
-}.float-right {
-  float: right;
 }.-m-0 {
   margin: -0px;
 }.-m-0\.5 {
@@ -1009,8 +1007,6 @@ video {
   margin-left: -1px;
 }.-ms-1 {
   margin-inline-start: -0.25rem;
-}.-ms-2 {
-  margin-inline-start: -0.5rem;
 }.-mt-6 {
   margin-top: -1.5rem;
 }.-mt-7 {
@@ -1071,6 +1067,8 @@ video {
   margin-right: 1.25rem;
 }.mr-7 {
   margin-right: 1.75rem;
+}.mr-8 {
+  margin-right: 2rem;
 }.ms-1 {
   margin-inline-start: 0.25rem;
 }.ms-2 {
@@ -1161,8 +1159,6 @@ video {
   height: 0.5rem;
 }.h-2\.5 {
   height: 0.625rem;
-}.h-24 {
-  height: 6rem;
 }.h-3 {
   height: 0.75rem;
 }.h-3\.5 {
@@ -1191,8 +1187,6 @@ video {
   height: 16rem;
 }.h-7 {
   height: 1.75rem;
-}.h-72 {
-  height: 18rem;
 }.h-8 {
   height: 2rem;
 }.h-80 {
@@ -1207,8 +1201,6 @@ video {
   height: 100rem;
 }.h-\[13rem\] {
   height: 13rem;
-}.h-\[15rem\] {
-  height: 15rem;
 }.h-\[20rem\] {
   height: 20rem;
 }.h-\[250px\] {
@@ -1334,8 +1326,8 @@ video {
   width: 25rem;
 }.w-\[27rem\] {
   width: 27rem;
-}.w-\[30px\] {
-  width: 30px;
+}.w-\[40rem\] {
+  width: 40rem;
 }.w-\[500px\] {
   width: 500px;
 }.w-\[calc\(100\%\+2rem\)\] {
@@ -1753,8 +1745,6 @@ video {
   white-space: normal;
 }.whitespace-nowrap {
   white-space: nowrap;
-}.break-words {
-  overflow-wrap: break-word;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-\[20px\] {
@@ -2112,8 +2102,6 @@ video {
   padding-bottom: 1.5rem;
 }.pb-7 {
   padding-bottom: 1.75rem;
-}.pb-8 {
-  padding-bottom: 2rem;
 }.pb-9 {
   padding-bottom: 2.25rem;
 }.pe-0 {
@@ -2146,6 +2134,8 @@ video {
   padding-right: 1.25rem;
 }.pr-7 {
   padding-right: 1.75rem;
+}.pr-8 {
+  padding-right: 2rem;
 }.ps-0 {
   padding-inline-start: 0px;
 }.ps-1 {
@@ -2353,6 +2343,9 @@ video {
 }.text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(114 59 19 / var(--tw-text-opacity));
+}.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -2539,8 +2532,6 @@ video {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}.hover\:transform:hover {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.hover\:border-blue-500:hover {
   --tw-border-opacity: 1;
   border-color: rgb(63 131 248 / var(--tw-border-opacity));
@@ -2550,9 +2541,6 @@ video {
 }.hover\:bg-blue-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(195 221 253 / var(--tw-bg-opacity));
-}.hover\:bg-blue-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(164 202 254 / var(--tw-bg-opacity));
 }.hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(118 169 250 / var(--tw-bg-opacity));
@@ -2821,9 +2809,6 @@ video {
 }.group:hover .group-hover\:text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}.group:hover .group-hover\:text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }.group\/item:hover .group-hover\/item\:underline {
   text-decoration-line: underline;
 }.group\/link:hover .group-hover\/link\:underline {
@@ -3213,6 +3198,11 @@ video {
     margin-right: auto;
   }
 
+  .sm\:-my-2 {
+    margin-top: -0.5rem;
+    margin-bottom: -0.5rem;
+  }
+
   .sm\:ms-4 {
     margin-inline-start: 1rem;
   }
@@ -3567,10 +3557,6 @@ video {
     display: none;
   }
 
-  .md\:h-40 {
-    height: 10rem;
-  }
-
   .md\:h-48 {
     height: 12rem;
   }
@@ -3581,10 +3567,6 @@ video {
 
   .md\:h-auto {
     height: auto;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
   }
 
   .md\:w-2\/4 {
@@ -3605,10 +3587,6 @@ video {
 
   .md\:w-72 {
     width: 18rem;
-  }
-
-  .md\:w-80 {
-    width: 20rem;
   }
 
   .md\:w-\[900px\] {
@@ -3638,14 +3616,6 @@ video {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
-  .md\:items-end {
-    align-items: flex-end;
   }
 
   .md\:items-center {
@@ -3805,18 +3775,6 @@ video {
     flex-direction: row;
   }
 
-  .lg\:items-start {
-    align-items: flex-start;
-  }
-
-  .lg\:items-end {
-    align-items: flex-end;
-  }
-
-  .lg\:items-center {
-    align-items: center;
-  }
-
   .lg\:justify-center {
     justify-content: center;
   }
@@ -3935,10 +3893,6 @@ video {
     display: none;
   }
 
-  .xl\:h-72 {
-    height: 18rem;
-  }
-
   .xl\:h-\[87\.5vh\] {
     height: 87.5vh;
   }
@@ -3998,18 +3952,6 @@ video {
 
   .xl\:flex-row {
     flex-direction: row;
-  }
-
-  .xl\:items-start {
-    align-items: flex-start;
-  }
-
-  .xl\:items-end {
-    align-items: flex-end;
-  }
-
-  .xl\:items-center {
-    align-items: center;
   }
 
   .xl\:gap-10 {
@@ -4076,22 +4018,6 @@ video {
 
   .\32xl\:grid-cols-\[--cols-2xl\] {
     grid-template-columns: var(--cols-2xl);
-  }
-
-  .\32xl\:flex-row {
-    flex-direction: row;
-  }
-
-  .\32xl\:items-start {
-    align-items: flex-start;
-  }
-
-  .\32xl\:items-end {
-    align-items: flex-end;
-  }
-
-  .\32xl\:items-center {
-    align-items: center;
   }
 }.ltr\:hidden:where([dir="ltr"], [dir="ltr"] *) {
   display: none;
