--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -1007,8 +1007,6 @@ video {
   margin-left: -1px;
 }.-ms-1 {
   margin-inline-start: -0.25rem;
-}.-ms-2 {
-  margin-inline-start: -0.5rem;
 }.-mt-6 {
   margin-top: -1.5rem;
 }.-mt-7 {
@@ -1061,6 +1059,8 @@ video {
   margin-right: 0.25rem;
 }.mr-1\.5 {
   margin-right: 0.375rem;
+}.mr-10 {
+  margin-right: 2.5rem;
 }.mr-2 {
   margin-right: 0.5rem;
 }.mr-4 {
@@ -1111,8 +1111,6 @@ video {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
-}.mr-10 {
-  margin-right: 2.5rem;
 }.line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -1205,8 +1203,12 @@ video {
   height: 100rem;
 }.h-\[13rem\] {
   height: 13rem;
+}.h-\[20rem\] {
+  height: 20rem;
 }.h-\[250px\] {
   height: 250px;
+}.h-\[25rem\] {
+  height: 25rem;
 }.h-\[270px\] {
   height: 270px;
 }.h-\[28rem\] {
@@ -1318,6 +1320,8 @@ video {
   width: 18rem;
 }.w-\[21rem\] {
   width: 21rem;
+}.w-\[23rem\] {
+  width: 23rem;
 }.w-\[25rem\] {
   width: 25rem;
 }.w-\[40rem\] {
@@ -1739,8 +1743,6 @@ video {
   white-space: normal;
 }.whitespace-nowrap {
   white-space: nowrap;
-}.break-words {
-  overflow-wrap: break-word;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-\[20px\] {
@@ -2122,6 +2124,8 @@ video {
   padding-left: 1.75rem;
 }.pl-9 {
   padding-left: 2.25rem;
+}.pr-0 {
+  padding-right: 0px;
 }.pr-10 {
   padding-right: 2.5rem;
 }.pr-5 {
@@ -2160,8 +2164,6 @@ video {
   padding-top: 2rem;
 }.pt-\[6px\] {
   padding-top: 6px;
-}.pr-0 {
-  padding-right: 0px;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -2244,6 +2246,8 @@ video {
   line-height: 2;
 }.leading-none {
   line-height: 1;
+}.leading-normal {
+  line-height: 1.5;
 }.leading-relaxed {
   line-height: 1.625;
 }.tracking-tight {
@@ -3234,16 +3238,16 @@ video {
     height: 1.5rem;
   }
 
+  .sm\:w-6 {
+    width: 1.5rem;
+  }
+
   .sm\:w-\[calc\(100\%\+3rem\)\] {
     width: calc(100% + 3rem);
   }
 
   .sm\:w-full {
     width: 100%;
-  }
-
-  .sm\:w-6 {
-    width: 1.5rem;
   }
 
   .sm\:max-w-2xl {
@@ -3560,12 +3564,16 @@ video {
     height: 12rem;
   }
 
+  .md\:h-7 {
+    height: 1.75rem;
+  }
+
   .md\:h-96 {
     height: 24rem;
   }
 
-  .md\:h-7 {
-    height: 1.75rem;
+  .md\:h-auto {
+    height: auto;
   }
 
   .md\:w-2\/6 {
@@ -3580,12 +3588,20 @@ video {
     width: 10rem;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-7 {
     width: 1.75rem;
+  }
+
+  .md\:w-72 {
+    width: 18rem;
+  }
+
+  .md\:w-\[900px\] {
+    width: 900px;
+  }
+
+  .md\:w-full {
+    width: 100%;
   }
 
   .md\:columns-\[--cols-md\] {
@@ -3609,14 +3625,6 @@ video {
     flex-direction: row;
   }
 
-  .md\:items-start {
-    align-items: flex-start;
-  }
-
-  .md\:items-end {
-    align-items: flex-end;
-  }
-
   .md\:items-center {
     align-items: center;
   }
@@ -3633,6 +3641,14 @@ video {
     --tw-space-x-reverse: 0;
     margin-right: calc(0px * var(--tw-space-x-reverse));
     margin-left: calc(0px * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:rounded-lg {
+    border-radius: 0.5rem;
+  }
+
+  .md\:rounded-none {
+    border-radius: 0px;
   }
 
   .md\:rounded-xl {
@@ -3759,18 +3775,6 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
-  }
-
-  .lg\:items-start {
-    align-items: flex-start;
-  }
-
-  .lg\:items-end {
-    align-items: flex-end;
-  }
-
-  .lg\:items-center {
-    align-items: center;
   }
 
   .lg\:justify-center {
@@ -3947,18 +3951,6 @@ video {
     flex-direction: row;
   }
 
-  .xl\:items-start {
-    align-items: flex-start;
-  }
-
-  .xl\:items-end {
-    align-items: flex-end;
-  }
-
-  .xl\:items-center {
-    align-items: center;
-  }
-
   .xl\:justify-between {
     justify-content: space-between;
   }
@@ -4027,22 +4019,6 @@ video {
 
   .\32xl\:grid-cols-\[--cols-2xl\] {
     grid-template-columns: var(--cols-2xl);
-  }
-
-  .\32xl\:flex-row {
-    flex-direction: row;
-  }
-
-  .\32xl\:items-start {
-    align-items: flex-start;
-  }
-
-  .\32xl\:items-end {
-    align-items: flex-end;
-  }
-
-  .\32xl\:items-center {
-    align-items: center;
   }
 }.ltr\:hidden:where([dir="ltr"], [dir="ltr"] *) {
   display: none;
