--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -857,6 +857,9 @@ video {
   inset: 0px;
 }.inset-4 {
   inset: 1rem;
+}.inset-x-0 {
+  left: 0px;
+  right: 0px;
 }.inset-y-0 {
   top: 0px;
   bottom: 0px;
@@ -1215,6 +1218,8 @@ video {
   height: 30rem;
 }.h-\[48rem\] {
   height: 48rem;
+}.h-\[50vh\] {
+  height: 50vh;
 }.h-\[75px\] {
   height: 75px;
 }.h-\[calc\(100\%-1rem\)\] {
@@ -1264,6 +1269,8 @@ video {
   width: 2.5rem;
 }.w-11 {
   width: 2.75rem;
+}.w-11\/12 {
+  width: 91.666667%;
 }.w-16 {
   width: 4rem;
 }.w-2 {
@@ -2348,6 +2355,8 @@ video {
   opacity: 0;
 }.opacity-100 {
   opacity: 1;
+}.opacity-40 {
+  opacity: 0.4;
 }.opacity-50 {
   opacity: 0.5;
 }.opacity-70 {
